[workspace]
resolver = "2"
members = ["crates/f3dx-cache", "crates/f3dx-replay", "crates/f3dx-cache-py"]

[workspace.package]
version = "0.0.2"
edition = "2024"
authors = ["Federico Benini <smigolsmigol@protonmail.com>"]
license = "MIT"
repository = "https://github.com/smigolsmigol/f3dx-cache"

[workspace.dependencies]
pyo3 = { version = "0.23", features = ["abi3-py310"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redb = "2.2"
blake3 = "1.5"
thiserror = "1.0"

[workspace.lints.clippy]
dbg_macro = "warn"
todo = "warn"

[workspace.lints.rust]
unsafe_code = "warn"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
