[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "f3dx-cache"
version = "0.0.4"
description = "DEPRECATED. Consolidated into f3dx[cache]. Install `f3dx` and import from `f3dx.cache`."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Federico Benini", email = "smigolsmigol@protonmail.com" },
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
]
# Final transition release. Re-exports from the new location at f3dx.cache;
# emits DeprecationWarning on import. EOL: 2026-08-30 (4 months after
# 2026-04-30 phase-C ship). New users: `pip install f3dx[cache]`.
#
# Pin tightened to `>=0.0.19,<0.1` so a future f3dx 0.1 breaking change
# does not silently break shim users via resolver upgrade. If f3dx 0.1
# ships, this shim ships a 0.0.5 with the matching pin; older shim
# installs stay locked to the 0.0.x line.
dependencies = [
    "f3dx>=0.0.19,<0.1",
]

[project.entry-points.pytest11]
# Keep the pytest plugin registered so existing test rigs keep finding
# the @pytest.mark.f3dx_cache marker. The plugin re-imports from the
# shimmed `f3dx_cache.Cache` which now points at f3dx.cache.Cache.
f3dx_cache = "f3dx_cache.pytest_plugin"

[tool.hatch.build.targets.wheel]
packages = ["python/f3dx_cache"]

[tool.hatch.build.targets.sdist]
include = [
    "python/f3dx_cache",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
